src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__ln_numeric.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: "#[sqlfunc(sqlname = \"lnnumeric\")]\nfn ln_numeric(a: Numeric) -> Result<Numeric, EvalError> {\n    log_numeric(a, dec::Context::ln, \"ln\")\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct LnNumeric;
impl crate::func::EagerUnaryFunc for LnNumeric {
    type Input<'a> = Numeric;
    type Output<'a> = Result<Numeric, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        ln_numeric(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for LnNumeric {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("lnnumeric")
    }
}
fn ln_numeric(a: Numeric) -> Result<Numeric, EvalError> {
    log_numeric(a, dec::Context::ln, "ln")
}
