src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__sqrt_numeric.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: "#[sqlfunc(sqlname = \"sqrtnumeric\")]\nfn sqrt_numeric(mut a: Numeric) -> Result<Numeric, EvalError> {\n    if a.is_negative() {\n        return Err(EvalError::NegSqrt);\n    }\n    let mut cx = numeric::cx_datum();\n    cx.sqrt(&mut a);\n    numeric::munge_numeric(&mut a).unwrap();\n    Ok(a)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct SqrtNumeric;
impl crate::func::EagerUnaryFunc for SqrtNumeric {
    type Input<'a> = Numeric;
    type Output<'a> = Result<Numeric, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        sqrt_numeric(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for SqrtNumeric {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("sqrtnumeric")
    }
}
fn sqrt_numeric(mut a: Numeric) -> Result<Numeric, EvalError> {
    if a.is_negative() {
        return Err(EvalError::NegSqrt);
    }
    let mut cx = numeric::cx_datum();
    cx.sqrt(&mut a);
    numeric::munge_numeric(&mut a).unwrap();
    Ok(a)
}
